plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
}

group = 'com.puppytalk'
version = '0.0.1-SNAPSHOT'

allprojects {
    group = 'com.puppytalk'
    version = '0.0.1-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = '17'
        targetCompatibility = '17'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

// Each module manages its own plugins and dependencies based on its layer responsibilities
